<resources>
    <string name="app_name">Soccer Now</string>
    <string name="title_activity_content">ContentActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="news">News</string>

    <string name="primera_division">Primera Division</string>
    <string name="primera_liga">Primera Liga</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="ligue_1">Ligue 1</string>
    <string name="serie_A">Serie A</string>
    <string name="champions_league">Champions-League</string>

    <string name="chate">Chate</string>
    <string name="top_news">Top News</string>
    <string name="latest_news">Latest News</string>
    <string name="top_Order">top</string>
    <string name="latest_Order">latest</string>
    <string name="news_source">talksport</string>
    <string name="snackbar_message_connected">Connected</string>
    <string name="snackbar_message_disconnected">No Internet Connection</string>
    <string name="matches">Matches</string>
    <string name="leagueTable">League Table</string>
    <string name="notYet">Not yet</string>
    <string name="teamsplayers">Teams Players</string>
    <string name="internet_mass">It seems you are not connected to the internet</string>
    <string name="retry">RETRY</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="dataNotAvalible">Team Data Not Available</string>
    <string name="fav_league">Favorite League</string>
    <string name="league_code">code</string>
    <string name="dadabaseEmpty">DataBase Is Empty</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="empty_widget_view">Data Not Available</string>
    <string name="send">Send</string>
    <string name="choose_fav">choose your favort league</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
    <string name="win">Wins</string>
    <string name="drwas">Draws</string>
    <string name="losse">Loses</string>
    <string name="pts">Pts.</string>
    <string name="sb">Sport Bible</string>
    <string name="chatDesc">Image upload from gallery</string>
    <string name="league_name">League Icon</string>
    <string name="image">Image upload from gallerys</string>
    <string name="team_1">Home Team</string>
    <string name="ayway_team">away team</string>
    <string name="news_pic">news image</string>
    <string name="league_image">League Image</string>
    <string name="signed_in">Signed in!</string>
    <string name="signed_cancel">Sign in canceled</string>


</resources>
