<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_primera_division"
            android:icon="@drawable/n446"
            android:title="@string/primera_division" />
        <item
            android:id="@+id/nav_primera_liga"
            android:icon="@drawable/n446"
            android:title="@string/primera_liga" />
        <item
            android:id="@+id/nav_bundesliga"
            android:icon="@drawable/n446"
            android:title="@string/bundesliga" />
        <item
            android:id="@+id/nav_ligue_1"
            android:icon="@drawable/n446"
            android:title="@string/ligue_1" />

        <item
            android:id="@+id/nav_serie_A"
            android:icon="@drawable/n446"
            android:title="@string/serie_A" />
        <item
            android:id="@+id/nav_champions_league"
            android:icon="@drawable/n446"
            android:title="@string/champions_league" />

        <item
            android:id="@+id/nav_chating"
            android:icon="@drawable/ic_chate"
            android:title="@string/chate" />
    </group>

    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->

</menu>
