<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="samuel.example.com.soccernow.view.football.LeagueTableFragment">

    <LinearLayout
        android:id="@+id/content_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/leagueImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_16"
                android:contentDescription="@string/league_image" />

            <TextView
                android:id="@+id/leagueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16"
                android:textStyle="bold" />

        </LinearLayout>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:orientation="vertical"


            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingTop="@dimen/dp_8"
                    android:textSize="@dimen/text_size" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingTop="@dimen/dp_8"
                    android:text="@string/win"
                    android:textSize="@dimen/defult_text_size" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingTop="@dimen/dp_8"
                    android:text="@string/drwas"
                    android:textSize="@dimen/defult_text_size" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingTop="@dimen/dp_8"
                    android:text="@string/losse"
                    android:textSize="@dimen/defult_text_size" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingTop="@dimen/dp_8"
                    android:text="@string/pts"
                    android:textSize="@dimen/defult_text_size" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/ProgressBarStyle"
            android:visibility="gone" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/recycler_view_padding"
            android:scrollbarStyle="outsideOverlay" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/connection_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/data_base_impty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/dadabaseEmpty"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/errorImage"
            android:layout_height="@dimen/errorImage"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/retry"
            android:src="@drawable/refresh" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/internet_mass" />

        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/button"
            android:gravity="center"
            android:padding="@dimen/dp_8"
            android:text="@string/retry"
            android:textColor="@color/colorAccent"

            />
    </LinearLayout>


</LinearLayout>
