<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/dp_16">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_4"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_8"
        android:paddingTop="@dimen/dp_8"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:gravity="center" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:gravity="center"
            android:text="@string/name"

            android:textColor="@color/black"
            android:textSize="@dimen/defult_text_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:gravity="center"
            android:text="@string/pts"
            android:textColor="@color/black"
            android:textSize="@dimen/defult_text_size" />


    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/widget_ingredients_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="10dp" />

        <TextView
            android:id="@+id/empty_widget_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/empty_widget_view" />
    </FrameLayout>
</LinearLayout>